tests/NormalTests/paczka1/fuzzy1/93740857.err
Error in line 2: TuR S956 40,3
Error in line 11: ZmHA8zNQA S956 2!,9
Error in line 9: dRlhisNwtdg S482 21,9
Error in line 12: dRlhisNwtdg A299 6,3
Error in line 22: m4P A299 53,3
Error in line 18: ZmHA8zNQA S956 64,3
Error in line 34: ZmHA8zNQA A299 13,8
